--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -31,24 +31,27 @@
 }
 
 .nav-downloadcv:hover {
- 
-  transform: translateY(-2px);
+
+    transform: translateY(-2px);
 }
+
 .nav-downloadcv img {
     width: 20px;
     height: 20px;
-    margin-right: 10px;}
- .btn-cv {
-     display: inline-block;
-     background: linear-gradient(135deg, #dd73ad 20%, #9ca2ec 100%);
-     color: #fff;
-     padding: 10px 20px;
-     border-radius: 8px;
-     text-decoration: none;
-     font-weight: bold;
-     transition: all 0.3s ease-in-out;
-     box-shadow: 0 4px 10px rgba(0, 123, 255, 0.3);
- }
+    margin-right: 10px;
+}
+
+.btn-cv {
+    display: inline-block;
+    background: linear-gradient(135deg, #dd73ad 20%, #9ca2ec 100%);
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 4px 10px rgba(0, 123, 255, 0.3);
+}
 
 
 .nav-menu li {
@@ -74,6 +77,8 @@
 @media (max-width:768px) {
     .navbar {
         margin: 20px 50px;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     .nav-connect {
@@ -101,17 +106,17 @@
         top: 0;
         gap: 30px;
         background: linear-gradient(135deg, #e778b5 20%, #0e22d6 100%);
-        width: 350px;
+        width: 80%;
         height: 100%;
         z-index: 2;
         transition: right 0.5s;
-        right: -350px;
+        right: -100%;
 
     }
 
     .nav-menu li {
         font-size: 30px;
-        padding-left: 100px;
+        padding-left: 20px;
         flex-direction: row;
         gap: 20px
     }
