--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -18,7 +18,7 @@
 
 .project-title h1 {
   padding: 0px 30px;
-  font-size: 50px;
+  font-size: 30px;
   font-weight: 400;
   text-align: center;
 }
@@ -131,7 +131,8 @@
   }
 
   .project-title h1 {
-    font-size: 26px;
+    font-size: 30px;
+    font-weight: 500;
   }
 
   .project-container {
