--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -3,20 +3,23 @@
     flex-direction: column;
     gap: 80px;
     margin: 80px 170px;
+    align-items: center;
+    text-align: center;
+
 }
 
 .contact-title {
     position: relative;
     background: linear-gradient(135deg, #e778b5 20%, #0e22d6 100%);
-     background-clip: text;
- -webkit-background-clip: text;
- -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .contact-title h1 {
     padding: 0px 30px;
-    font-size: 30px;
-    font-weight: 500;
+    font-size: 50px;
+    font-weight: 600;
 }
 
 .contact-title img {
@@ -110,59 +113,65 @@
     color: white;
 }
 
-.contact-submit:hover{
-    transform: scale(1.1) ;
+.contact-submit:hover {
+    transform: scale(1.1);
     transition: 0.3s;
 }
 
 @media (max-width:768px) {
-    .contact{
-        gap:80px;
-        margin:50px 70px;
-        align-items: start;
-        
+    .contact {
+        gap: 80px;
+        margin: 50px 70px;
+        align-items: center;
+        text-align: center;
+
     }
-    .contact-title img{
-         width: 130px;
-         right: -20px;
+
+    .contact-title img {
+        width: 130px;
+        right: -20px;
     }
-    .contact-title h1{
-        font-size: 30px;
+
+    .contact-title h1 {
+        font-size: 50px;
         padding: 0;
-        font-weight: 500;
     }
-    .contact-section{
+
+    .contact-section {
         flex-direction: column;
     }
-    .contact-left h1{
+
+    .contact-left h1 {
         font-size: 50px;
     }
-    .contact-left p{
+
+    .contact-left p {
         font-size: 18px;
     }
 
-    .contact-detail{
+    .contact-detail {
         gap: 20px;
     }
 
-    .contact-detail img{
+    .contact-detail img {
         width: 25px;
     }
-    
-    .contact-right label{
+
+    .contact-right label {
         font-size: 20px;
     }
 
-    .contact-right input{
+    .contact-right input {
         width: 100%;
         font-size: 20px;
     }
 
-    .contact-right textarea{
+    .contact-right textarea {
         width: 95%;
         font-size: 20px;
     }
-    .contact-submit{
+
+    .contact-submit {
         font-size: 20px;
         padding: 15px 50px;
     }
