--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -113,6 +113,7 @@
     .about-para{
         font-size: 23px;
         line-height: 32px;
+         width: 85%;
     }
     .about-achievements{
         flex-direction: column;
