--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -114,6 +114,7 @@
         font-size: 23px;
         line-height: 32px;
          width: 85%;
+        margin: 0 auto;
     }
     .about-achievements{
         flex-direction: column;
