--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -110,11 +110,10 @@
     .about-sections{
         flex-direction: row;
     }
-    .about-para{
+    .about-para p{
         font-size: 23px;
         line-height: 32px;
          width: 85%;
-        margin: 0 auto;
     }
     .about-achievements{
         flex-direction: column;
