--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -17,7 +17,7 @@
 }
 
 .about-title h1 {
-    padding: 0px 30px;
+    padding: 0px 10px;
     font-size: 50px;
     font-weight: 600;
 
@@ -97,7 +97,7 @@
     .about{
         gap:80px;
         margin:50px 70px;
-        align-items: start;
+        
     }
     .about-title img{
          width: 130px;
@@ -108,12 +108,15 @@
         padding: 0;
     }
     .about-sections{
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;    
+        gap: 40px;
     }
-    .about-para p{
+    .about-para{
         font-size: 23px;
         line-height: 32px;
          width: 85%;
+
     }
     .about-achievements{
         flex-direction: column;
