--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -39,7 +39,7 @@
 }
 
 .project-card {
-  border: 2px solid #0e22d6;
+  border: 2px solid #6a75df;
   border-radius: 20px;
   overflow: hidden;
   background-color: #fff;
@@ -66,7 +66,7 @@
 .project-card p {
   margin-top: 10px;
   padding: 0 10px;
-  font-size: 16px;
+  font-size: 20px;
   color: #333;
   text-align: center;
 }
@@ -144,6 +144,6 @@
   }
 
   .project-card p {
-    font-size: 14px;
+    font-size: 18px;
   }
 }
